# lca

./: forestry.py  llm.py  main.py  pyproject.toml
data/lca/: Copy of REV_241119_ICV_FeSiMg_v1.xlsx  carbonization.xlsx  conversion_factors.xlsx  densities.xlsx  emission_factors.xlsx  forestry_fuels.html  gwp_kyoto.xlsx  maritime_factors.xlsx  mobile_combustion.xlsx  stationary_combustion.xlsx
data/lca/factors/: fertilizers.xlsx  grid_factors.xlsx
data/lca/mock/: carbonization.xlsx  forestry_energy.xlsx  forestry_fertilizers.xlsx  forestry_fuels.xlsx  industrial.xlsx  quartz_mining.xlsx
data/lca/process/: forestry_fertilizers.xlsx  forestry_fuels.xlsx
processing/: carbonization.py  industrial.py  quartz_mining.py
processing/forestry/: energy.py  fertilizers.py  fuels.py
tests/: test_forestry.py
utils/: emission_factors.py
