[project]
name = "lca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "st-material-table>=0.0.4",
    "streamlit",
    "streamlit-aggrid>=1.1.0",
    "streamlit-awesome-table>=0.1.0",
    "streamlit-excel-table",
    "torch>=2.6.0",
    "transformers>=4.48.2",
    "watchdog>=6.0.0",
]
