[project]
name = "lca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "streamlit",
    "streamlit-react-flow>=0.0.3",
    "watchdog>=6.0.0",
]
